force-app/main/default/objects/SvfCloud__mdt/SvfCloud__mdt.object-meta.xml
<CustomObject>
    <label>SVFCloud</label>
</CustomObject>