force-app/main/default/objects/SvfCloud__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>地域</label>
    <length>80</length>
    <type>Text</type>
</CustomField>