force-app/main/default/objects/SvfCloud__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <label>シークレット</label>
    <length>80</length>
    <type>Text</type>
</CustomField>