force-app/main/default/objects/SvfCloud__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>ユーザ名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>